--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -26,6 +26,9 @@ jobs:
           source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
+      
+      - name: 🚀 Auto-fix with Black
+        run: black --line-length 120 .
 
       - name: 🛠️ Linting (Vérification du code)
         run: |
