--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -32,7 +32,7 @@ jobs:
          source venv/bin/activate
          pip install --upgrade pip
          pip install flake8
-         flake8 --max-line-length=100 --ignore=E203,W503 --exclude=venv .
+         flake8 --max-line-length=100 --ignore=E203,W503 --exclude=venv --config=setup.cfg .
 
   test_unit:
     needs: build
