--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:  # Ajout du déclenchement manuel
+  workflow_dispatch:  # Déclenchement manuel
 
 jobs:
   build:
@@ -61,8 +61,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-     # Déclenchement manuel
-    if: github.event_name == 'workflow_dispatch'
+    # Déclenchement manuel uniquement
+    if: ${{ github.event_name == 'workflow_dispatch' }} 
+    needs: test_unit  # Dépend de l'exécution des tests unitaires
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
