--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Simulating Deployment 🚀
+      - name: Simulating Deployment
         run: |
           echo "--------------------------------"
           echo "✅ Build validé, tests passés"
